--- a/zeta-charity-nextjs/src/app/globals.css
+++ b/zeta-charity-nextjs/src/app/globals.css
@@ -4,10 +4,8 @@
 
 html,
 body {
-  max-width: 100vw;
-  height: 100vh;
+  background-color: #005741;
   overflow: hidden;
-  background-color: aqua;
 }
 
 .header-absolute {
@@ -21,8 +19,8 @@ body {
   color: #ffffff;
   display: flex;
   justify-content: space-between;
-  align-items:center;
-  padding: 4px 20px 0px 20px; 
+  align-items: center;
+  padding: 0 20px;
 }
 
 .main-absolute {
@@ -31,8 +29,7 @@ body {
   left: 0;
   right: 0;
   z-index: 1;
-  height: 100%;
-  background-color: #005741;
+  height: calc(100vh - var(--padding-top));
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -41,15 +38,200 @@ body {
   border-style: solid;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
 .side-bar {
   width: 20%;
   height: 100%;
-  background-color: #004b38;
   border-width: 0px 1px 0px 0px;
   border-color: #ffffff;
   border-style: solid;
   display: flex;
   flex-direction: column;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: center;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.side-bar2 {
+  width: 20%;
+  height: 100%;
+  border-width: 0px 0px 0px 1px;
+  border-color: #ffffff;
+  border-style: solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.side-bar::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.side-bar2::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.streamer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-left: 10px;
+  height: 50px;
+  scrollbar-width: none;
+}
+
+.streamer-container:hover {
+  background-color: #004b38;
+  cursor: pointer;
+}
+
+.streamer-format {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 90%;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+}
+
+.streamer-container2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-left: 10px;
+  height: 70px;
+  scrollbar-width: none;
+}
+
+.streamer-container2:hover {
+  background-color: #004b38;
+  cursor: pointer;
+}
+
+.streamer-container3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-left: 10px;
+  height: 70px;
+  scrollbar-width: none;
+}
+
+.streamer-format2 {
+  display: flex;
+  word-break: normal;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 90%;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+}
+
+.home-container {
+  width: 80%;
+  height: 100%;
+  background-color: #005741;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+  padding-bottom: 10%;
+}
+
+.home-container2 {
+  width: 60%;
+  height: 100%;
+  background-color: #005741;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.video-container {
+  margin: 20px;
+  max-width: 350px;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.video-container2 {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.token-container {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.token-container:hover {
+  cursor: pointer;
+  background-color: #004b38;
+}
+
+.token-container2 {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.input-field {
+  width: 90%;
+  font-size: x-large;
+
+  margin-bottom: 16px;
+  border-radius: 10px;
+  text-align: center;
 }
